--- a/public/resume.css
+++ b/public/resume.css
@@ -68,7 +68,62 @@ a#pdf:hover { background: #222; }
 #srt-ttab img.last { margin-top: 20px }
 
 /* --// override to force 1/8th width grids -- */
+.submit_button{
+ margin-left: 18%; 
+    text-decoration-color: cyan;
+    
+}
+.form{
+    margin-left: 20px; padding: 50px 50px; text-decoration: none; bottom: 50px; top: 50px;
+
+}
 .yui-gf .yui-u{width:80.2%;}
 .yui-gf div.first{width:12.3%;}
 
 
+.form-body{
+    width: 100%
+}
+
+.form-body>.form-heading{
+    font-size: xx-large;
+    margin-bottom: .7em;
+}
+
+.contact-form{
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
+
+.contact-form>div>label{
+    width: 100%;
+    font-size: large;
+}
+
+.contact-form>div>input{
+    width: 100%;
+    height: 2.8em;
+}
+
+.contact-form>div>textarea{
+    width: 100%;
+    border: 2px #000 solid;
+}
+
+.submit-button{
+    margin-top: 2em;
+    width: 100%;
+}
+
+.submit-button > input[type="button"]{
+    height: 4em;
+    width: 100%;
+    cursor: pointer;
+    margin-bottom: 4em;
+}
+
+.submit-button > input[type="button"]:hover{
+    background-color: black;
+    color: white;
+}
